--- a/index.html
+++ b/index.html
@@ -12,7 +12,16 @@
 </head>
 <body>
     <!-- header start -->
-     <header>
+     <header class="navigation">
+      <div class="logo">
+        <img src="images/icons/logo.png" alt=""> 
+        <h3>Idea</h3>
+        
+      </div>
+      <div class="page-detail">
+        <p>Home</p><p>About </p><p>Works</p>
+        <img src="images/icons/profile.png" alt="">
+      </div>
 
      </header>
      <!-- header end -->
